# new-words-backend

./: .dockerignore  .env.example  .gitignore  .travis.yml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yaml
src/config/: settings.py  urls.py
src/new_words/: admin.py  apps.py  models.py  serializers.py  services.py  views.py
src/new_words/management/commands/: process_texts.py  process_worker.py
src/new_words/migrations/: 0001_initial.py  0002_text_state.py  0003_word_popularity.py
src/templates/new_words/: text_form.html
tests/: factories.py
